@startuml
'http://plantuml.com/skinparam.html
skinparam handwritten true
skinparam monochrome true
skinparam packageStyle rect
skinparam defaultFontName FG Virgil
skinparam shadowing false

class ListUsersUI <<presentation>>
class ListUsersController <<application>>
class AuthzRegistry <<util>>
class AuthorizationService <<service>>
class UserManagementService <<service>>
class PersistenceContext  <<persistence>>
class RepositoryFactory  <<factory>>
class UserRepository <<repository>>

ListUsersUI --> ListUsersController : theController
ListUsersController --> AuthorizationService: theAuthzService
ListUsersController --> UserManagementService: theService
UserManagementService --> PersistenceContext: persistence
PersistenceContext --> RepositoryFactory: factory
RepositoryFactory --> UserRepository: repo
UserManagementService --> UserRepository: repo
ListUsersController --> AuthzRegistry: registry

ListUsersUI : doShow()
ListUsersUI : show()
ListUsersController : listAllUsers()
AuthzRegistry : authorizationService()
AuthzRegistry : userService()
AuthorizationService : ensureAuthenticatedUserHasAnyOf(Role...)
UserManagementService : allUsers()
PersistenceContext : repositories()
RepositoryFactory : users()
UserRepository : findAll()

@enduml
